testsuite/tests/typecheck/should_fail/tcfail114.stderr

tcfail114.hs:11:20: error: [GHC-47535]
    • ‘foo’ is not a record selector
    • In the expression: undefined {foo = ()}
      In an equation for ‘test’: test = undefined {foo = ()}
